src/scss/_reveal.scss
// body.active-gallery {
//   .reveal__inner {
//     opacity: 0;
//   }
// }

.brand-wrap {
  display: inline-block;
  height: 100%;
  padding-right: 7.1%;
  position: relative;
  vertical-align: top;
  width: 33.3333%;

  // 1
  &:nth-child(1) {
    width: 25.8%;

    .reveal__wrap {
      @include center-y;
      height: 51.5%;
      width: 100%;

      &:before,
      &:after {
        content: '';
        position: absolute;
        left: 0;
        height: 3px;
        width: 100%;
        background: $color-beige;
        z-index: 100;
      }

      &:before {
        content: '';
        top: -2px;
      }

      &:after {
        bottom: -2px;
        background: $color-beige;
      }
    }

    .reveal__inner {
      position: absolute;
      top: 0;
      left: 0;
      height: 100%;
      width: 100%;
    }
  }

  // 2
  &:nth-child(2) {
    display: inline-flex;
    flex-direction: column;
    width: 40.5%;

    .reveal:nth-child(1) {
      height: 30.6%;
      margin-bottom: 6.6vw;

      .reveal__inner {
        width: 63.7%;
        left: 24.8%;
      }
    }

    // 3
    .reveal:nth-child(2) {
      height: 51.2%;
    }

    .reveal:nth-child(1),
    .reveal:nth-child(2) {

      .reveal__inner {
        height: 100%;
      }
      .reveal__img {
        height: 100%;
      }
    }
  }

  // 4
  &:nth-child(3) {
    width: 31.4%;

    .reveal__inner {
      top: 12.74%;
      height: 65.25%;
    }
  }

  // 5
  &:nth-child(4) {
    width: 30.55%;

    .reveal__inner {
      top: 27.5%;
      height: 63%;
    }
  }

  // 6
  &:nth-child(5) {
    width: 53%;
    width: 55.5%;

    .reveal__inner {
      height: 78%;
    }
  }

  // 7
  &:nth-child(6) {
    padding-right: 0;
    width: 23.45%;

    .reveal__inner {
      top: 27.5%;
      height: 63%;
    }
  }

  &:last-of-type {
    padding-right: 0;
    margin-right: 7.1%;
    width: 37%;
  }
}

.reveal {
  backface-visibility: hidden;
  position: relative;
  width: 100%;
  height: 100%;

  &__inner {
    cursor: pointer;
    backface-visibility: hidden;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    overflow: hidden;

    @media (min-width: $screen-lg-min) { cursor: none; }

    // &.is-clickable:hover {
    //   .reveal__img {
    //     transform: scale
    //   }
    // }
  }

  &__img {
    backface-visibility: hidden;
    background-position: 50% 50%;
    background-size: cover;
    position: relative;
    height: 100%;
    width: 100%;
  }

  &__overlay {
    background-color: $color-beige;
    position: absolute;
    left: 0;
    height: calc(50.5% + 1px);
    width: calc(100% + 1px);

    &--top {
      top: -1px;
    }

    &--bottom {
      bottom: -1px;
    }
  }
}

